fixed scrollbar on mobile

--- a/css/payment-details.css
+++ b/css/payment-details.css
@@ -32,8 +32,9 @@ body form ul {
   flex-direction: column;
   align-items: flex-end;
   position: absolute;
-  right: -1000px;
+  right: 0;
   top: 148px;
+  visibility: hidden;
   transition: all 0.5s ease-out;
 }
 
@@ -46,7 +47,7 @@ body form ul {
 
 body:target .cart-drawer-overlay {
   position: absolute;
-  right: 0;
+  visibility: visible;
 }
 
 .cart-items {
