--- a/css/styles.css
+++ b/css/styles.css
@@ -100,10 +100,10 @@ a {
   flex-direction: column;
   align-items: flex-end;
   position: absolute;
-  right: -1000px;
+  right: 0;
   top: 148px;
+  visibility: hidden;
   transition: all 0.5s ease-out;
-  max-width: 100vw;
 }
 
 .empty-cart-drawer {
@@ -131,8 +131,7 @@ a {
 
 body:target .empty-cart-drawer-overlay {
   position: absolute;
-  right: 0;
-  max-width: 100vw;
+  visibility: visible;
 }
 
 /* always used  */
